--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Tether is working on USA₮ which will be a dollar-backed stablecoin, designed for the Internet age. Spend, send, and receive money instantly, right from your phone. No intermediaries required. Pure freedom.">
   <meta property="og:title" content="USA₮ - Dollars That Move Without Intermediaries">
   <meta property="og:description" content="Tether is working on USA₮ which will be a dollar-backed stablecoin, designed for the Internet age. Spend, send, and receive money instantly, right from your phone. No intermediaries required. Pure freedom.">
-  <meta property="og:image" content="https://usat.io/images/og-image.png">
+  <meta property="og:image" content="https://usatether.io/images/og-image.png">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="USA₮ - Dollars That Move Without Intermediaries">
