--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           protections of the Federal Deposit Insurance Corporation (FDIC), the Securities Investor Protection
           Corporation (SIPC), or any other government agency. This website is published by Tether Operations, S.A. de C.V.
           for informational purposes only. Tether Operations, S.A. de C.V. is not the intended issuer of USA₮. The issuer
-          of USA₮ will be Anchorage Digital Bank, N.A</p>
+          of USA₮ will be Anchorage Digital Bank, N.A business@usatether.io</p>
       </div>
     </div>
   </div>
